--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <!-- selamat datang di toko merry-->
    <div class="bg-indigo-600 px-4 py-3 text-white" data-aos="slide-down">
     <p class="text-center text-sm font-medium">
-      HALO SELAMAT DATANG DI TOKO MERRY hai
+      HALO SELAMAT DATANG DI TOKO MERRY 
     </p>
   </div>
    <!-- selamat datang di toko merry end-->
